--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,6 @@
         <title>Welcome</title>
     </head>
     <body>
-        <p>Welcome! Please <a href="/login">log in</a>.</p>
+        <p>Welcome! Please <a href="/login.html">log in</a>.</p>
     </body>
 </html>
