--- a/public/html/login.html
+++ b/public/html/login.html
@@ -4,7 +4,7 @@
         <title>Login</title>
     </head>
     <body>
-        <form action="/login" method="post">
+        <form action="/node/login" method="post">
             <div>
             <label>Username:</label>
             <input type="text" name="username"/><br/>
