--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <p id="profile"></p>
-        <a href="/node/logout">Log out</a>
+        <a href="/logout">Log out</a>
     </body>
 </html>
