--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Scratch Games</title>
-        <link rel = "stylesheet" type = "text/css" href = "css/Main.css" />
+        <link rel = "stylesheet" type = "text/css" href = "Main.css" />
         <script src="UI.js"></script>
-	<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script src="/login.js"></script>
     </head>
     <body>
@@ -19,13 +19,13 @@
             </div>
 
             <div id="middle" class="middle">
-                <img id ="logo" src="css/Logo4.png">
+                <img id ="logo" src="Logo4.png">
                 <br>
                 <form id="login" action="/login" method="post">
                     <input id="uname" type="text" name="username" autofocus placeholder="Username"/><br/>
                     <br>
                     <input type="password" name="password" placeholder="Password"/>
-                    <% if (messages.length) { %><p style="color: white;">*<%= messages[0] %><p><% } else{%><p>&nbsp</p><%}%>
+                    <p id="message" style="color: white;"><p>
                     <input type="submit" value="Submit"/>
                 </form>
                 <div id="create" onclick="createUI()">
