Update for all nav to hit Node
Now Node can check for auth and redirect to login.

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -6,6 +6,6 @@
         <script src="/home.js"></script>
     </head>
     <body>
-        <p>Hello, <span id="displayname"></span>. View your <a href="/profile.html">profile</a>.</p>
+        <p>Hello, <span id="displayname"></span>. View your <a href="/profile">profile</a>.</p>
     </body>
 </html>
