We have a proper DB now!
Configured MySQL connector with Sequelize as a query builder and manager ontop.
Login passwords are hashed.
Passport registration config started.
Google & Facebook login added, configured, and fully functional (getting
the api key was the hardest part)
Added links to login.html for the google and facebook login paths.
Added all necessary packages (and some future ones) to package.json.
Nginx config updated to dissable intercepting Node 50x error pages. They now
pass directly through to the browser client.

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -30,6 +30,8 @@
                 </form>
                 <div id="create" onclick="createUI()">
                     <p>Create an Account</p>
+                    <a href="/auth/facebook">Login with Facebook</a>
+                    <a href="/auth/google">Sign In with Google</a>
                 </div>
             </div>
             <div class="bottom"></div>
