Keep Me Logged In Added
New Passport Strategy: Remember Me
New Token Type: Remember Me (with create and consume functions)
New Router Auth Function: Create Rememeber Me if Requested, Destroy on
Logout.
Added checkbox to login form (value does not matter, but does need to be
set)
Edit server to include remember me auth.

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -25,6 +25,8 @@
                     <input id="uname" type="text" name="username" autofocus placeholder="Username"/><br/>
                     <br>
                     <input type="password" name="password" placeholder="Password"/>
+                    <br>
+                    <input type="checkbox" name="remember_me" value="Please_Do"> Keep Me Logged In<br>
                     <p id="message" style="color: white;"><p>
                     <input type="submit" value="Log In"/>
                 </form>
