--- a/public/html/home.html
+++ b/public/html/home.html
@@ -4,53 +4,8 @@
         <meta charset="UTF-8">
         <title>Scratch Games</title>
         <link rel = "stylesheet" type = "text/css" href = "Main.css" />
-        <script src="UI.js"></script>
-        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-        <script src="login.js"></script>
     </head>
     <body>
-        <div class="background">
-            <nav>
-                <div class="nav"><a href="index.html">Home</a></div>
-            </nav>
-
-            <div class="top">
-                <h1>Scratch Games</h1>
-            </div>
-
-            <div id="middle" class="middle">
-                <img id ="logo" src="Logo4.png">
-                <br>
-                <form id="login" action="/login" method="post">
-                    <input id="uname" type="text" name="username" autofocus placeholder="Username"/><br/>
-                    <br>
-                    <input type="password" name="password" placeholder="Password"/>
-                    <br>
-                    <input type="checkbox" name="remember_me" value="Please_Do"> Keep Me Logged In<br>
-                    <p id="message" style="color: white;"><p>
-                    <input type="submit" value="Log In"/>
-                </form>
-                <div id="create" onclick="createUI()">
-                    <p>Create an Account</p>
-                </div>
-                <div>
-                    <a href="/auth/facebook">Login with Facebook</a>
-                    <a href="/auth/google">Sign In with Google</a>
-                </div>
-                <br>
-                <hr>
-                <br>
-                <form id="register" action="/signup" method="post">
-                    <input id="uname" type="text" name="username" autofocus placeholder="Username"/><br/>
-                    <br>
-                    <input type="password" name="password" placeholder="Password"/><br/>
-                    <br>
-                    <input type="email" name="email" placeholder="Email Address"/>
-                    <p id="signupMessage" style="color: white;"><p>
-                    <input type="submit" value="Sign Up"/>
-                </form>
-            </div>
-            <div class="bottom"></div>
-        </div>
+            <a href="/profile">Profile</a>
     </body>
 </html>
