Move profile to be home
Old Home removed.
Profile -> Home

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>Scratch Games</title>
-        <link rel = "stylesheet" type = "text/css" href = "Main.css" />
+        <link rel="stylesheet" type="text/css" href="Main.css"/>
+        <title>Profile</title>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="/profile.js"></script>
     </head>
     <body>
-            <a href="/profile">Profile</a>
+        <p id="profile"></p>
+        <a href="/logout">Log out</a>
     </body>
 </html>
