Start styling home page for demo.
Nginx redirects index to login.
Home page added some styling.
Moved where profile.js was putting user display name.

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -7,7 +7,23 @@
         <script src="/profile.js"></script>
     </head>
     <body>
-        <p id="profile"></p>
-        <a href="/logout">Log out</a>
+        <div class="header wrapper">
+            <div class="wrapper">
+                <img id="logo" src="Logo4.png">
+                <h2>Scratch Games</h2>
+            </div>
+            <div>
+                <div class="logout">
+                    <a href="/logout">Log out</a>
+                </div>
+            </div>
+        </div>
+        <div class="main wrapper">
+            <div>
+                <p>Hello <span id="username"></span></p>
+                <br>
+                <p id="profile"></p>
+            </div>
+        </div>
     </body>
 </html>
