--- a/public/html/login.html
+++ b/public/html/login.html
@@ -25,7 +25,7 @@
             <input type="password" name="password" placeholder="Password"/>
             <br>
             <br>
-            <input type="password" name="password" placeholder="Confirm Password"/>
+            <input type="password" name="confirmpassword" placeholder="Confirm Password"/>
             <br>
             <p id="cmessage" style="color: red;"><p>
             <input type="submit" value="Create User"/>
