Move all added css for Home into new css file
Revert all Main.css changes
Put all css additions into Home.css
Edit home.html to load both stylesheets.

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="Main.css"/>
+        <link rel="stylesheet" type="text/css" href="Home.css"/>
         <title>Profile</title>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script src="/profile.js"></script>
