--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
     <head>
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/favicon/site.webmanifest">
+        <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#da532c">
+        <link rel="shortcut icon" href="/favicon/favicon.ico">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
+
         <link rel="stylesheet" type="text/css" href="Main.css"/>
         <title>Profile</title>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
