Basic Styling of Home Page for Demo

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" type="text/css" href="Main.css"/>
         <link rel="stylesheet" type="text/css" href="Home.css"/>
-        <title>Profile</title>
+        <title>Scratch Games</title>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script src="/profile.js"></script>
     </head>
@@ -33,9 +33,9 @@
         <div class="main wrapper">
             <div>
                 <p>Hello <span id="username"></span></p>
-                <br>
-                <p id="profile"></p>
             </div>
+        </div>
+        <div id="profile" class="footer wrapper">
         </div>
     </body>
 </html>
