--- a/public/html/login.html
+++ b/public/html/login.html
@@ -11,7 +11,6 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-
     <meta charset="UTF-8">
     <title>Scratch Games</title>
     <link rel="stylesheet" type="text/css" href="Main.css"/>
@@ -19,29 +18,22 @@
     <script src="/login.js"></script>
 </head>
 <body>
+<a href="index.html">
 <div class="top">
     <h1>Scratch Games</h1>
     <img id="logo" src="Logo4.png">
-</div>
+</div></a>
 <div class="column">
     <div id="create">
         <p>Welcome to Scratch Games</p>
         <form id="register" action="/login" method="post">
             <input id="cuname" type="text" name="username" autofocus placeholder="Requested Username"/><br/>
             <p id="Invalid username" style="color: red;"><p>
-            <br>
             <input type="text" name="email" placeholder="Email Address"/>
-            <br>
-            <br>
             <input type="password" name="password" placeholder="Password"/>
-            <br>
-            <br>
             <input type="password" name="confirmpassword" placeholder="Confirm Password"/>
-            <br>
             <p id="cmessage" style="color: red;"><p>
             <input type="submit" value="Create User"/>
-            <br>
-            <br>
         </form>
     </div>
     <div class="row" class="middle" id="hide">
@@ -49,25 +41,19 @@
             <h2>Login</h2>
             <form id="login" action="/login" method="post">
                 <input id="uname" type="text" name="username" autofocus placeholder="Username"/><br/>
-                <br>
                 <input type="password" name="password" placeholder="Password"/>
-                <br>
-                <br>
-                <input type="checkbox" name="remember_me" value="Please_Do"> Keep Me Logged In
-                <br>
+                <input type="checkbox" name="remember_me" value="Please_Do" id="check">
+                <label for="check">Keep me signed in</label>
                 <p id="message" style="color: red;"><p>
                 <input type="submit" value="Login"/>
-                <br>
-                <br>
             </form>
         </div>
         <div class="right">
             <p>If you don't already have an account create one using one of the methods below</p>
             <div class="createbtn" onclick="createUI()">
-                <p>Create an Account</p>
+                Create an Account
             </div>
             <div class="center">or</div>
-
             <a href="/auth/facebook">
                 <div class="createbtn" id="facebook">
                    Sign in with Facebook
