--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,8 +12,10 @@
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>Scratch Games</title>
     <link rel="stylesheet" type="text/css" href="Main.css"/>
+    <link rel="stylesheet" type="text/css" href="Login.css">
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/login.js"></script>
 </head>
@@ -53,7 +55,7 @@
             <div class="createbtn" onclick="createUI()">
                 Create an Account
             </div>
-            <div class="center">or</div>
+            <div class="or">or</div>
             <a href="/auth/facebook">
                 <div class="createbtn" id="facebook">
                    Sign in with Facebook
