--- a/public/html/home.html
+++ b/public/html/home.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="Main.css"/>
         <title>Profile</title>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="/profile.js"></script>
     </head>
     <body>
