--- a/public/html/home.html
+++ b/public/html/home.html
@@ -49,19 +49,52 @@
                 <div class="nav end">Joincode</div>
             </nav>
             <div id="change">
-                The Everything
+                <div id="bighome">
+                    <nav>
+                        <div class="nav">All</div>
+                        <div class="nav">UNO</div>
+                        <div class="nav">Go Fish</div>
+                        <div class="nav end">Fibbage</div>
+                    </nav>
+                    <div id="table">
+                        <table id="lobbylist">
+                            <tr>
+                                <th>Name</th>
+                                <th>Type</th>
+                                <th># of Players</th>
+                                <th># of Spectators</th>
+                                <th>Join</th>
+                                <th>Spectate</th>
+                            </tr>
+                            <tr>
+                                <td>Austin is great</td>
+                                <td>UNO</td>
+                                <td>1</td>
+                                <td>38932</td>
+                                <td>Locked Symbol</td>
+                                <td>Unlocked Symbol</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div id="search">
+                        <input type="text" placeholder="Search">
+                    </div>
+                    <div class="createbtn small">
+                        Create Lobby
+                    </div>
+                </div>
             </div>
             <div class="leaderboard">
                 Can't remember how the leaderboards all work. Is this only the top ten players per game?
                 Where my Leaderboard shows where I stand in the overall leaderboard?
                 <div class="accord">
-                    <h4 class="accordbtn">UNO</h4>
+                    <h4 class="accordbtn2">UNO</h4>
                     <div class="accordcon">
                         <ul id="UNO">
                             <li>Austin</li>
                         </ul>
                     </div>
-                    <h4 class="accordbtn">SomeGame</h4>
+                    <h4 class="accordbtn2">SomeGame</h4>
                     <div class="accordcon">
                         <ul id="SomeOtherGame">
                             <li>Some random Guy</li>
@@ -69,7 +102,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="right">
             <div class="sideTitle">Chat</div>
@@ -95,22 +127,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!--<p id="profile"></p>-->
 
     </body>
