Better Names & Some Housekeeping
Since home.html is really just the frame for the app, it is better named
base.html, and the js file was renamed as well.

Socket.IO JS added to base.html so it can be accessed.

Started going through and removing unused code. profile.js is deprecated
and socket.io will handel all communication. app/router /profile path is
invalid, as there no longer is any profile.html page.

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -14,9 +14,10 @@
 
         <link rel="stylesheet" type="text/css" href="Main.css"/>
         <title>Scratch Games</title>
+
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-        <!--<script src="/profile.js"></script>-->
-        <script src="/home.js"></script>
+        <script src="socket.io/socket.io.js"></script>
+        <script src="base.js"></script>
     </head>
     <body>
     <div class="corner"><a href="/logout">Log out</a></div>
