Basic chat send to server and emit through sockets working. Mostly UI focused

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -12,15 +12,20 @@
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
-        <!-- Bootstrap -->
+        <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+        <!-- Bootstrap -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
         <!-- Custom Styling -->
         <link rel="stylesheet" type="text/css" href="Main.css"/>
+
+        <!-- Socket -->
+        <script src="/socket.io/socket.io.js"></script>
 
         <title>Scratch Games</title>
 
@@ -84,33 +89,27 @@
             <div class="accord">
                 <h4 class="accordbtn">Global</h4>
                 <div class="accordcon">
-                    <ul id="globalChat">
-                        <li>Message stand in Global Chat</li>
+                    <ul class="global">
+
                     </ul>
                     <div class="chatInput">
-                        <form action="">
-                            <input type="text" id="m" autocomplete="off" placeholder="Your message here"/>
-                            <button>Send</button>
+                        <form class="chat" name="global" action="">
+                            <input type="text" id="global" autocomplete="off" placeholder="Your message here"/>
+                            <input type="submit" value="Send"/>
                         </form>
                     </div>
                 </div>
                 <h4 class="accordbtn">Lobby</h4>
                 <div class="accordcon">
-                    <ul id="lobbyChat">
-                        <li>Message stand in Lobby Chat</li>
+                    <ul class="lobby">
+
                     </ul>
                     <div class="chatInput">
-                        <form action="">
-                            <input type="text" id="m" autocomplete="off" placeholder="Your message here"/>
-                            <button>Send</button>
+                        <form class="chat" name="lobby" action="">
+                            <input type="text" id="lobby" autocomplete="off" placeholder="Your message here"/>
+                            <input type="submit" value="Send"/>
                         </form>
                     </div>
-                </div>
-                <h4 class="accordbtn">Jill</h4>
-                <div class="accordcon">
-                    <ul id="JillChat">
-                        <li>Message stand in Jill Chat</li>
-                    </ul>
                 </div>
             </div>
         </div>
