Restoring chat username styling

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="right">
+        <div id="chat" class="right">
             <div class="sideTitle">Chat</div>
             <div class="accord">
                 <h4 class="accordbtn">Global</h4>
