Experimental changes!!. Should take you to a lobby screen once you have finished the initial create lobby dialog. Needs some more time and effort UI side and needs some server functionality. Work in progress.

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -60,7 +60,7 @@
         <div class="center">
             <nav>
                 <div class="nav" id="navh">Home</div>
-                <div class="nav" id="navp">Profiles</div>
+                <div class="nav" id="navp">Profile</div>
                 <div class="nav" id="navl">My Leaderboard</div>
                 <div class="nav end" id="navj">Joincode</div>
             </nav>
