--- a/public/html/lobbySnip.html
+++ b/public/html/lobbySnip.html
@@ -1,32 +1,25 @@
 <div id="bighome">
-    <nav>
-        <div class="nav">All</div>
-        <div class="nav">UNO</div>
-        <div class="nav">Go Fish</div>
-        <div class="nav end">Fibbage</div>
-    </nav>
-    <div id="table">
-        <table id="lobbylist">
-            <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th># of Players</th>
-                <th># of Spectators</th>
-                <th>Join</th>
-                <th>Spectate</th>
-            </tr>
-            <tr>
-                <td>Austin is great</td>
-                <td>UNO</td>
-                <td>1</td>
-                <td>38932</td>
-                <td>Locked Symbol</td>
-                <td>Unlocked Symbol</td>
-            </tr>
-        </table>
+    <div class="column">
+        <nav>
+            <div class="nav" id="nav">GameType</div>
+            <div class="nav" id="nav">Lobbyname</div>
+            <div class="nav end" id="nav">Joincode: 75843</div>
+        </nav>
+        <div>
+            <div class="left">Players and if they have readied</div>
+            <div class="right">Spectators</div>
+        </div>
+        <div id="gameSettings">
+            <form id="gameSetting" action="">
+
+                Some game specific settings.
+                #of rounds
+                # turn timer.
+
+            </form>
+        </div>
+        <div>
+            <button id="readyUp">Start Game/Ready Up</button>
+        </div>
     </div>
-    <div id="search">
-        <input type="text" placeholder="Search">
-    </div>
-    <button id="createbtn">Create Lobby</button>
 </div>
