Inital Attempt as Server Side History
Issue is currently the system only remembers the second last nav you
clicked. Debugging needed.

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -64,7 +64,7 @@
                 <div class="nav" id="navl">My Leaderboard</div>
                 <div class="nav end" id="navj">Joincode</div>
             </nav>
-            <div id="change">
+            <div id="main">
                 <!-- Loaded From Snippets -->
             </div>
             <div class="leaderboard">
