--- a/public/html/base.html
+++ b/public/html/base.html
@@ -113,50 +113,10 @@
         </div>
     </div>
 
-    <!-- Playing with a modal content box -->
-    <div class="modal" id="createModal">
-        <div class="modalContent">
-            <span class="close">&times;</span>
-            <div id="createHeader">
-            <p>Lobby Settings</p>
-            </div>
-            <div id="createForm">
-                <form id="createLobby" action="">
-                    <input id="name" type="text" name="username" placeholder="Lobby Name"/>
-                    <div class="row">
-                        <div class="leftForm">
-                            <label for="leftRadio">Public</label>
-                            <input type="radio" id="leftRadio" name="public" value="public" checked>
-                        </div>
-                        <div class="rightForm">
-                            <label for="rightRadio">Private</label>
-                            <input type="radio" id="rightRadio" name="public" value="private">
-                        </div>
-                    </div>
-                    <div>
-                        <label for="type">Game type:</label>
-                        <select name="type" id="type">
-                            <option value="pizza">Games list auto generated here?</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="numPlay">Max number of players:</label>
-                        <select name="numPlayers" id="numPlay">
-                            <option value="1">#of players auto constrained</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="numSpec">Number of allowed Spectators:</label>
-                        <select name="numSpec" id="numSpec">
-                            <option value="1">#of spec</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                        </select>
-                    </div>
-                    <p id="message" style="color: red;"><p>
-                    <input type="submit" value="Create"/>
-                </form>
-            </div>
+    <div id="modal" class="modal">
+        <span id="modalClose" class="close">&times;</span>
+        <div id="modalContent">
+            <!-- Loaded From Snippets -->
         </div>
     </div>
     </body>
