--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,9 +12,22 @@
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="Main.css"/>
+
         <title>Welcome</title>
+        <style>
+        body{
+            background-color: #4c4f55;
+        }
+
+        </style>
     </head>
     <body>
-        <p>Welcome! Please <a href="/login">log in</a>.</p>
+
+        <div class = 'jumbotron vertical-center'>
+            <p class = 'jumboWord' >Welcome! Please <a href="/login">log in</a>.</p>
+        </div>
+
     </body>
 </html>
