--- a/public/html/modals/createLobby.html
+++ b/public/html/modals/createLobby.html
@@ -1,8 +1,7 @@
-<div class="modalContent">
-    <span class="close">&times;</span>
-    <div id="createHeader">
-    <p>Lobby Settings</p>
-    </div>
+<div class="modal-header">
+    <h3>Lobby Settings</h3>
+</div>
+<div class="modal-body">
     <div id="createForm">
         <form id="createLobby" action="">
             <input id="name" type="text" name="lobbyname" placeholder="Lobby Name"/>
@@ -43,4 +42,6 @@
             <input type="submit" value="Create"/>
         </form>
     </div>
+</div>
+<div class="modal-footer">
 </div>
