--- a/public/html/snippets/joincode.html
+++ b/public/html/snippets/joincode.html
@@ -1,5 +1,9 @@
-<div>
-    <h1>Joincode</h1>
-    <br>
-    <p id="profile"></p>
+<div class="modal-header">
+    <h3>Enter Joincode</h3>
+</div>
+<div class="modal-body">
+    <p>TODO MAIN CONTENT</p>
+</div>
+<div class="modal-footer">
+
 </div>
