--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,8 +12,11 @@
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="Main.css"/>
+        <link rel = "stylesheet" type = "text/css" href = '../animate.css'/>
+
 
         <title>Welcome</title>
         <style>
@@ -25,7 +28,9 @@
     </head>
     <body>
 
-        <div class = 'jumbotron vertical-center'>
+        <!--animate.css and bootstrap css -->
+        <div class = 'container fadeInDown animated jumbotron vertical-center'>
+            <!-- jumbotron vertical-center-->
             <p class = 'jumboWord' >Welcome! Please <a href="/login">log in</a>.</p>
         </div>
 
